improved the file uploading for bulk, as the code was incorrect and also did not allow users to track the progress of their uploads. A user thought his file didn't load when it fact it did. Should be much better now.

--- a/src/main/webapp/gaze/network_builder_tool.xhtml
+++ b/src/main/webapp/gaze/network_builder_tool.xhtml
@@ -116,7 +116,9 @@
                                 <br/>
                                 <br/>
                                 <p:outputLabel for="@next" value="#{text['general.message.at_least']}"/>
-                                <p:spinner value="#{gazeBean.minSharedTargets}"/>
+                                <p:spinner value="#{gazeBean.minSharedTargets}">
+                                    <f:ajax />
+                                </p:spinner>
                             </p>
                         </p:tab>
                     </p:accordionPanel>
