--- a/src/main/webapp/import_your_data_network_builder_option_1.xhtml
+++ b/src/main/webapp/import_your_data_network_builder_option_1.xhtml
@@ -62,9 +62,18 @@
                                 widgetVar="fileInputChooser"
                                 style="width:700px;"
                                 >
-                                <p:fileUpload value="#{dataImportBean.file}" label="#{text['import_data.general.choose_csv_or_excel']}" mode="advanced" auto="false" skinSimple="true" sizeLimit="50000000"
-                                              process="@this" listener="#{dataImportBean.handleFileUpload}" oncomplete="PF('fileInputChooser').hide()" update=" :formRead :notifications"
-                                              allowTypes="/(\.|\/)(csv|xlsx|txt)$/">                                
+                                <p:fileUpload value="#{dataImportBean.file}"
+                                              label="#{text['import_data.general.choose_csv_or_excel']}"
+                                              mode="advanced"
+                                              multiple="false"
+                                              auto="false"
+                                              skinSimple="true"
+                                              sizeLimit="50000000"
+                                              process="@this"
+                                              listener="#{dataImportBean.handleFileUpload}"
+                                              oncomplete="PF('fileInputChooser').hide()"
+                                              update=" :formRead :notifications"
+                                              allowTypes="/(\.|\/)(csv|tsv|xlsx|txt)$/">                                
                                 </p:fileUpload>
                                 #{text['general.message.max_file_size']}: 50Mb.
                                 <br/>
@@ -124,7 +133,7 @@
                                                      >
                                             <f:facet name="header">
                                                 <p:selectBooleanCheckbox id="renderHeaders" value="#{dataImportBean.hasHeaders}" itemLabel="#{text['import_data.general.my_data_has_headers']}">
-                                                    <p:ajax update="tbl" listener="#{dataImportBean.toggleHeaders}"/>
+                                                    <p:ajax update="tbl"/>
                                                 </p:selectBooleanCheckbox>
                                             </f:facet>
                                             <p:column  width="25">
