added a param for min chars in Topics function inspired by Cowo function

--- a/src/main/webapp/topics/topics.xhtml
+++ b/src/main/webapp/topics/topics.xhtml
@@ -75,6 +75,19 @@
                                         <p:divider align="left">
                                             <div class="p-d-inline-flex p-ai-center">
                                                 <i class="pi pi-chart-bar p-mr-2"/>
+                                                <b>#{text['general.message.min_word_length']}</b>
+                                            </div>
+                                        </p:divider>
+                                        #{text['cowo.cowo.remove_smaller_words']} 4
+                                        <br/>
+                                        <br/>
+                                        <p:spinner id="spinner1" value="#{topicsBean.minCharNumber}" min="0" max="10" stepFactor="1">
+                                        </p:spinner>
+                                        <p:slider for="spinner1" minValue="0" maxValue="10" step="1"/>
+
+                                        <p:divider align="left">
+                                            <div class="p-d-inline-flex p-ai-center">
+                                                <i class="pi pi-chart-bar p-mr-2"/>
                                                 <b>#{text['general.nouns.academic_stopwords']}</b>
                                             </div>
                                         </p:divider>
