added css styles so that when the user imports a file with a table, the columns can be scrolled horizontally and all columns are then visible

--- a/src/main/webapp/import_your_structured_data_two_columns.xhtml
+++ b/src/main/webapp/import_your_structured_data_two_columns.xhtml
@@ -131,6 +131,10 @@
                                         <p:dataTable id="tbl" var="data"
                                                      value="#{dataInSheet.sheetData}"
                                                      rowIndexVar="rowIndex"
+                                                     scrollable="true"
+                                                     scrollWidth="100%"
+                                                     scrollHeight="400"
+                                                     tableStyle="width:auto; height:auto"
                                                      style="display:block; text-align:center"
                                                      rendered="#{not empty dataImportBean.dataInSheets}"
                                                      >
