--- a/src/main/webapp/import_your_data_network_builder_option_1.xhtml
+++ b/src/main/webapp/import_your_data_network_builder_option_1.xhtml
@@ -128,6 +128,10 @@
                                         <p:dataTable id="tbl" var="data"
                                                      value="#{dataInSheet.sheetDataWholeLines}"
                                                      rowIndexVar="rowIndex"
+                                                     scrollable="true"
+                                                     scrollWidth="100%"
+                                                     scrollHeight="400"
+                                                     tableStyle="width:auto; height:auto"
                                                      style="display:block; text-align:center"
                                                      rendered="#{not empty dataImportBean.dataInSheets}"
                                                      >
