cleaned the file upload logic, moved the hyphen check on pdf to the pdf importer, moved the lemmatizer to an API endpoint, double checked the progress bar logic: it needs to be initalized to zero I think

--- a/src/main/webapp/import_your_data_bulk_text.xhtml
+++ b/src/main/webapp/import_your_data_bulk_text.xhtml
@@ -117,8 +117,16 @@
                                 <br/>
                                 <br/>
                                 <!--PROGRESS BAR FOR READ OPERATION-->
-                                <p:progressBar id="pb" widgetVar="pbAjaxLong" ajax="true" value="#{dataImportBean.progress}" rendered="#{dataImportBean.renderProgressBar}"
-                                               labelTemplate="{value}%" styleClass="p-mt-3" global="false" interval="500">
+                                <p:progressBar
+                                    id="pb"
+                                    widgetVar="pbAjaxLong"
+                                    ajax="true"
+                                    value="#{dataImportBean.progress}"
+                                    rendered="#{dataImportBean.renderProgressBar}"
+                                    labelTemplate="{value}%"
+                                    styleClass="p-mt-3"
+                                    global="false"
+                                    interval="500">
                                 </p:progressBar>
                             </h:form>
                         </p:outputPanel>
