--- a/src/main/webapp/import_your_structured_data_two_columns.xhtml
+++ b/src/main/webapp/import_your_structured_data_two_columns.xhtml
@@ -66,14 +66,14 @@
                                 style="width:700px;"
                                 >
                                 <p:fileUpload
-                                    value="#{dataImportBean.file}"
                                     label="#{text['import_data.general.choose_csv_or_excel']}"
                                     mode="advanced"
                                     auto="false"
+                                    multiple="false"
                                     skinSimple="true"
                                     sizeLimit="50000000"
                                     process="@this"
-                                    listener="#{dataImportBean.handleFileUpload}"
+                                    listener="#{oneFileUploadInMultipleUploadBean.handleFileUpload}"
                                     oncomplete="PF('fileInputChooser').hide()"
                                     update=":formRead :notifications :launchButtons"
                                     allowTypes="/(\.|\/)(csv|tsv|xlsx)$/">                                
@@ -82,7 +82,11 @@
                             </p:overlayPanel>
 
                             <br/>
-                            <p:outputLabel rendered="#{dataImportBean.file ne null}" escape="false">#{text['general.message.file_loaded']} <strong style="color:#FF6347">#{dataImportBean.file.fileName}</strong>. #{text['import_data.general.click_below_to_read_it']}</p:outputLabel>
+                            <p:outputLabel
+                                rendered="#{dataImportBean.filesUploaded.size() gt '0'}"
+                                escape="false">
+                                <strong style="color:#FF6347">#{dataImportBean.displayNameForSingleUploadedFileOrSeveralFiles()}</strong>. #{text['import_data.general.click_below_to_read_it']}
+                            </p:outputLabel>
                         </h:form>
                         <br/>
                         <!--READ FILE OPERATION-->
