--- a/src/main/webapp/import_your_data_network_builder_option_2.xhtml
+++ b/src/main/webapp/import_your_data_network_builder_option_2.xhtml
@@ -41,7 +41,7 @@
             </f:facet>
             <p:panel>
                 <ui:include src="/WEB-INF/includes/header.xhtml" />
-                
+
 
                 <h1>#{text['general.message.upload_your_data']}</h1>
             </p:panel>
@@ -60,21 +60,28 @@
                                 widgetVar="fileInputChooser"
                                 style="width:700px;"
                                 >
-                                <p:fileUpload value="#{dataImportBean.file}"
-                                              label="#{text['import_data.general.choose_csv_or_excel']}"
-                                              mode="advanced"
-                                              auto="false"
-                                              skinSimple="true"
-                                              sizeLimit="50000000"
-                                              process="@this"
-                                              listener="#{dataImportBean.handleFileUpload}"
-                                              oncomplete="PF('fileInputChooser').hide()"
-                                              update=":formRead :notifications"
-                                              allowTypes="/(\.|\/)(csv|tsv|xlsx|txt)$/">                                
+                                <p:fileUpload
+                                    value="#{dataImportBean.file}"
+                                    label="#{text['import_data.general.choose_csv_or_excel']}"
+                                    mode="advanced"
+                                    multiple="false"
+                                    auto="false"
+                                    skinSimple="true"
+                                    sizeLimit="50000000"
+                                    listener="#{oneFileUploadInMultipleUploadBean.handleFileUpload}"
+                                    oncomplete="PF('fileInputChooser').hide()"
+                                    update=":formRead :notifications"
+                                    allowTypes="/(\.|\/)(csv|tsv|xlsx|txt)$/">                                
                                 </p:fileUpload>
                                 #{text['general.message.max_file_size']}: 50Mb. #{text['import_data.option2.file_must_have_columns']}
                                 <br/>
                             </p:overlayPanel>
+                            <br/>
+                            <p:outputLabel
+                                rendered="#{dataImportBean.filesUploaded.size() gt '0'}"
+                                escape="false">
+                                <strong style="color:#FF6347">#{dataImportBean.displayNameForSingleUploadedFileOrSeveralFiles()}</strong>. #{text['import_data.general.click_below_to_read_it']}
+                            </p:outputLabel>
                         </h:form>
 
                         <br/>
