--- a/src/main/webapp/topics/results.xhtml
+++ b/src/main/webapp/topics/results.xhtml
@@ -48,7 +48,7 @@
             <p:panel>
                 <ui:include src="/WEB-INF/includes/header.xhtml"/>
                 <ui:include src="/WEB-INF/includes/sidebar.xhtml"/>
-                
+
                 <h1>#{text['topics.topics_extraction_tool.tagline']}</h1>
             </p:panel>
             <p:spacer height="20"/>
@@ -56,8 +56,23 @@
                 <h:form target="_blank">
                     <p:commandButton value="#{text['general.verbs.download_results']}" ajax="false" onclick="PrimeFaces.monitorDownload(start, stop);"
                                      icon="pi pi-arrow-down" styleClass="p-mr-2">
-                        <p:fileDownload value="#{topicsBean.fileToSave}"/>
+                        <p:fileDownload value="#{topicsBean.excelFileToSave}"/>
                     </p:commandButton>
+                    <br/>
+                    <br/>
+                    <small><h:outputText value="#{text['topics.topics_extraction_tool.excel_export_details']}" /></small>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <p:commandButton value="#{text['general.message.download_gexf']}" ajax="false" onclick="PrimeFaces.monitorDownload(start, stop);"
+                                     icon="pi pi-arrow-down" styleClass="p-mr-2">
+                        <p:fileDownload value="#{topicsBean.gexfFile}"/>
+                    </p:commandButton>
+                    <br/>
+                    <br/>
+                    <small><h:outputText value="#{text['topics.topics_extraction_tool.gexf_export_details']}" escape="false"/></small>
+                    <br/>
+                    <br/>
                 </h:form>
                 <h:form>
                     <div class="card">
@@ -67,7 +82,7 @@
                             </p:column>
 
                             <p:column headerText="#{text['general.nouns.key_terms']}">
-                                <h:outputText value="#{item.value.topRankedElementsToString(10)}"/>
+                                <h:outputText value="#{item.value.topRankedElementsToStringWithoutCounts(10)}"/>
                             </p:column>
                         </p:dataTable>
                     </div>
